--- a/q/274350.html
+++ b/q/274350.html
@@ -26,11 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td></td><td>240723T163728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274362#274362">Styleurc</a></td></tr>
+<tr d-ix="0"><td>017</td><td>17 bytes</td><td>240724T095917Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274400#274400">Bubbler</a></td></tr>
 <tr d-ix="1"><td>015</td><td></td><td>240723T213211Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274372#274372">noodle p</a></td></tr>
-<tr d-ix="2"><td>024</td><td>24 bytes</td><td>240723T153830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274361#274361">ovs</a></td></tr>
+<tr d-ix="2"><td>019</td><td></td><td>240723T163728Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274362#274362">Styleurc</a></td></tr>
+<tr d-ix="3"><td>024</td><td>24 bytes</td><td>240723T153830Z</td><td><a href="https://codegolf.stackexchange.com/questions/274350/golfscript-many-items-rotation/274361#274361">ovs</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><s>22</s> 19 bytes</h1>
+<div id="pu0" class="pu"><h1>17 bytes</h1>
+<pre><code>(:x{[\]}*{~@@}x*\
+</code></pre>
+<p><a href="https://tio.run/##S8/PSStOLsosKPlvzaVkqaRgoaBkrqSgZKakYKoQbRKroGSspGCkoGSopGCgoKwQXJKYnK3gkliSyGWigB8oK3jmpaRWKJTkKxTllySWpIJYJRkgquC/hlVFdXRMbK1WdZ2DQ22FVsz/2IL/AA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
+<p>An entirely different approach that does not involve wrapping entire stack. Given <code>n</code>, the two top values are wrapped <code>n-1</code> times, putting the item to be brought up at the 2nd top position. Then the nested pairs are unwrapped, keeping the target at the 2nd top position, and finally it gets swapped to the top.</p>
+</div>
+<div id="pu1" class="pu"><h1><s>16</s> 15 bytes</h1>
+<pre><code>~].)&lt;\)&gt;(:x;+~x
+</code></pre>
+<p><a href="https://tio.run/##S8/PSStOLsosKPlvbaBgqGCkYKxgomCqYMZl8r8uVk/TJkbTTsOqwlq7ruJ/bLW6gnqt/n8A" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
+<p>Based on ovs's solution, but instead of separating N from the stack and assigning each to a variable, I do the <code>~</code> before collecting the stack into an array, and just use this array with <code>)</code>.</p>
+<p>Previously this solution assigned the array to the variable <code>a</code>, but ovs suggested to instead use <code>.</code> and <code>\</code>, which is a byte shorter.</p>
+</div>
+<div id="pu2" class="pu"><h1><s>22</s> 19 bytes</h1>
 <pre><code>])~1$1$&lt;@@&gt;[(](\++~
 </code></pre>
 <p><a href="https://tio.run/##S8/PSStOLsosKPlvraCUmJSckpqmZKhfp2CioKCskJlXUFpS/D9Ws85QxVDFxsHBLlojViNGW7vuf2zCfwA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
@@ -44,14 +58,7 @@
 ++~    # Concatenate and unpack everything
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><s>16</s> 15 bytes</h1>
-<pre><code>~].)&lt;\)&gt;(:x;+~x
-</code></pre>
-<p><a href="https://tio.run/##S8/PSStOLsosKPlvbaBgqGCkYKxgomCqYMZl8r8u1ipR0yZR007DqsJau67if2y1uoJ6rf5/AA" rel="nofollow noreferrer" title="GolfScript – Try It Online">Try it online!</a></p>
-<p>Based on ovs's solution, but instead of separating N from the stack and assigning each to a variable, I do the <code>~</code> before collecting the stack into an array, and just use this array with <code>)</code>.</p>
-<p>Previously this solution assigned the array to the variable <code>a</code>, but ovs suggested to instead use <code>.</code> and <code>\</code>, which is a byte shorter.</p>
-</div>
-<div id="pu2" class="pu"><h1>24 bytes</h1>
+<div id="pu3" class="pu"><h1>24 bytes</h1>
 <p>there is still plenty of room to golf this further, but I think this version shows the idea well.</p>
 <pre><code>:k;]:s;s k~&lt;s k~&gt;(:x;+~x
 </code></pre>
