--- a/q/274389.html
+++ b/q/274389.html
@@ -26,32 +26,39 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>Japt</td><td>240724T093257Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274397#274397">Shaggy</a></td></tr>
-<tr d-ix="1"><td>043</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
-<tr d-ix="2"><td>009</td><td>QuadR</td><td>240724T085533Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274394#274394">Ad&#225;</a></td></tr>
-<tr d-ix="3"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>094</td><td>Python 3.8 prerelease</td><td>240724T095658Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274399#274399">Jitse</a></td></tr>
+<tr d-ix="1"><td>010</td><td>Japt</td><td>240724T093257Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274397#274397">Shaggy</a></td></tr>
+<tr d-ix="2"><td>043</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
+<tr d-ix="3"><td>009</td><td>QuadR</td><td>240724T085533Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274394#274394">Ad&#225;</a></td></tr>
+<tr d-ix="4"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 10 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 94 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:s and[(s:=s.replace((x:=s[j:i+1])*2,x))for i in range(len(s))for j in range(i+1)][-1]
+</code></pre>
+<p><a href="https://tio.run/##TY9Lj4IwFIX3/IrSje2AVXQWDhGNS1duZhISNRNGUXAQmraT4Ia/ztxy8dFH7jlfT5teeTNZVU5nUrWnaNcWyfXnmBAdapKUxy3TYaSFSmWRHFLGanDbS5h7wZ6/Tfya81OlSE7ykqikPKesSEumkV6eFPJ8vx0G@7aLl9In3z6p/oyNXBPJtFFCyyI3QCU8MeY8dAgmbSzqUs@/CbiQSzagA@4Tdo9xDndUqkk3InKyJ5ZJlZeG2ZMoskHfpnhLKRkuCKUOrVHVVr7qW69vYFx3iQ6qQ72RN0IL1aGBBxO9FRZMnmDSoaZpEDRgPrMU1hVBpxxqstQ8mEF22HydMyQoHRqv41W8QmY1oPUrQxT3fcS2keBjNp6@w@p/1FngQgjXbsRQH2h5R8J2u6l@Xdg9fDiHzqvFvKoWyMHQfw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 10 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>I didn't understand the spec <em>at all</em> so this is based on the worked example &amp; test cases.</p>
 <pre><code>e&quot;(.+)%1&quot;Ï
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=ZSIoLispJTEizw&amp;input=WyJRVUFRVUFVQUwiLCIiLCJ4IiwieHgiLCJ4eSIsIiEhPyIsIisvKy8iLCIxKzErMSIsIjErMisxIiwifn5%2bIiwiVGhlVGhlbSIsInRoZXRoZW0iLCJjT1VnaCIsIlhJWEFYQSIsIklYSVhBWEEiLCJYeCIsIjE5ODAzNDAzNCIsIi4uLiEuLi4hIiwiLi4uIS4uLj8iLCJPb2shT29rPyIsIjxvPjxvbz4iXS1tUg" rel="nofollow noreferrer">Try it</a> (includes all test cases)</p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 43 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 43 bytes</h1>
 <p><em>-2 thanks to <a href="https://codegolf.stackexchange.com/users/76323/l4m2">@l4m2</a></em></p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=s=&gt;s==(s=s.replace(/(.+)\1/,&quot;$1&quot;))?s:f(s)
 </code></pre>
 <p><a href="https://tio.run/##bZLPToMwHMfve4rSmAChFqcedFshO3jYaRdNSOYOhHVDxXWhjZkx8gQmXjzqe/g8ewEfAcufls4JLXy//fTb/kq4j59inuR3G3G8ZgtalkvCScAJcTjhOKebLE6o4zvYc2/7PoJHfei6IR8sHe6Ww1kPgBmAEKgLmWaOGryFBu6Mxnrof/xsYm0UtqwQaqy1xp7v@VBhJTvc9@QNW6ykiU9NrIzCRVF0excHlV@nVLZHWONWGVikVGgsDnAyvVmlau/OKBxNonE0hg2uzH56ojmqzPjPwSLzm3dGn/vy4uTsXDaIlIEGxhhbVYdVunrtp1scthiH@6VN2YMle4M7o/CIBSPGgqbyUS3qdG/ew0uWX8VJ6jgzwEWOAN1uaCLoAsxdQALwIlfIqAA55YAA@YuK3B3KsYStOcsoztjKqXNyAmpmkW6NENg/3@@7zw/5tMEA2LuvN1vmX91h@Qs" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a>, 9 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a>, 9 bytes</h1>
 <p><em>Blatant rip-off of <a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency#comment590875_274391">l4m2's golf</a> of <a href="https://codegolf.stackexchange.com/a/274391/43319">Arnauld's JavaScript solution</a> — go upvote!</em></p>
 <pre><code>(.+)\1
 \1
 </code></pre>
 <p><a href="https://tio.run/##KyxNTCn6/19DT1szxpArxvD/f64KrgogquRSVLTn0tbX1ucy1AZCIGkEJOvq6rhCMlKBKJerJCO1BEQn@4emZ3BFeEY4RjhyeULpiAouQ0sLA2MTIOLS09NTBGEYw57LPz9bEYjtuWzy7Wzy8@3@P@pcCAA" rel="nofollow noreferrer" title="QuadR – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands/2649a799300cbf3770e2db37ce177d4a19035a25" rel="nofollow noreferrer">05AB1E (legacy)</a>, 8 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Δ.œ€ÔJéн
 </code></pre>
 <p><a href="https://tio.run/##ASMA3P8wNWFiMWX//86ULsWT4oKsw5RKw6nQvf//MTEuMCsxKzFlMQ" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##MzBNTDJM/V9Waa@k8KhtkoKSfaXS/3NT9I5OftS05vAUr8MrL@z9r6QXpvM/WklJR6kChMFEJZBQVLQHktr62vpAylAbCMG0EZiuq6sDkiEZqUCUC2SVZKSWQFjJ/qHpGUA6wjPCMcIRyPCEsyJAZhtaWhgYmwARkK2np6cIwggmyEr//GxFIAYxbfLtbPLz7UDaDPUMQG5INVSKBQA" rel="nofollow noreferrer">verify all test cases</a>.</p>
