--- a/q/83221.html
+++ b/q/83221.html
@@ -26,30 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>011</td><td>JCram</td><td>240723T135256Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/274357#274357">Kamila S</a></td></tr>
-<tr d-ix="1"><td>023</td><td>Rust</td><td>201209T234356Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216155#216155">user</a></td></tr>
-<tr d-ix="2"><td>027</td><td>Factor</td><td>201209T033726Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216133#216133">Bubbler</a></td></tr>
-<tr d-ix="3"><td>030</td><td>R + pryr</td><td>201209T001120Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216129#216129">Dominic </a></td></tr>
-<tr d-ix="4"><td>003</td><td>Jelly</td><td>201205T015548Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216007#216007">caird co</a></td></tr>
-<tr d-ix="5"><td>021</td><td>Perl 5 MListUtil=sum pla</td><td>201205T033107Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216011#216011">Xcali</a></td></tr>
-<tr d-ix="6"><td>009</td><td>CJam</td><td>160619T190933Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83300#83300">Andrea B</a></td></tr>
-<tr d-ix="7"><td>036</td><td>Mathematica</td><td>160619T101732Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83289#83289">LegionMa</a></td></tr>
-<tr d-ix="8"><td>012</td><td>Actually</td><td>160619T030947Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83275#83275">user4594</a></td></tr>
-<tr d-ix="9"><td>023</td><td>Julia</td><td>160619T003308Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83270#83270">Dennis</a></td></tr>
-<tr d-ix="10"><td>004</td><td>Jelly</td><td>160618T042219Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83222#83222">Dennis</a></td></tr>
-<tr d-ix="11"><td>023</td><td>Perl 6</td><td>160618T171944Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83247#83247">Brad Gil</a></td></tr>
-<tr d-ix="12"><td>007</td><td>MATL</td><td>160618T054251Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83228#83228">DJMcMayh</a></td></tr>
-<tr d-ix="13"><td>009</td><td>Pyke</td><td>160618T093636Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83231#83231">Blue</a></td></tr>
-<tr d-ix="14"><td>015</td><td>J</td><td>160618T052514Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83226#83226">miles</a></td></tr>
-<tr d-ix="15"><td>029</td><td>Python</td><td>160618T043338Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83224#83224">xnor</a></td></tr>
-<tr d-ix="16"><td>038</td><td>Python</td><td>160618T042947Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83223#83223">Leaky Nu</a></td></tr>
+<tr d-ix="0"><td>007</td><td>Japt</td><td>240724T101123Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/274401#274401">Shaggy</a></td></tr>
+<tr d-ix="1"><td>011</td><td>JCram</td><td>240723T135256Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/274357#274357">Kamila S</a></td></tr>
+<tr d-ix="2"><td>023</td><td>Rust</td><td>201209T234356Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216155#216155">user</a></td></tr>
+<tr d-ix="3"><td>027</td><td>Factor</td><td>201209T033726Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216133#216133">Bubbler</a></td></tr>
+<tr d-ix="4"><td>030</td><td>R + pryr</td><td>201209T001120Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216129#216129">Dominic </a></td></tr>
+<tr d-ix="5"><td>003</td><td>Jelly</td><td>201205T015548Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216007#216007">caird co</a></td></tr>
+<tr d-ix="6"><td>021</td><td>Perl 5 MListUtil=sum pla</td><td>201205T033107Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/216011#216011">Xcali</a></td></tr>
+<tr d-ix="7"><td>009</td><td>CJam</td><td>160619T190933Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83300#83300">Andrea B</a></td></tr>
+<tr d-ix="8"><td>036</td><td>Mathematica</td><td>160619T101732Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83289#83289">LegionMa</a></td></tr>
+<tr d-ix="9"><td>012</td><td>Actually</td><td>160619T030947Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83275#83275">user4594</a></td></tr>
+<tr d-ix="10"><td>023</td><td>Julia</td><td>160619T003308Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83270#83270">Dennis</a></td></tr>
+<tr d-ix="11"><td>004</td><td>Jelly</td><td>160618T042219Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83222#83222">Dennis</a></td></tr>
+<tr d-ix="12"><td>023</td><td>Perl 6</td><td>160618T171944Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83247#83247">Brad Gil</a></td></tr>
+<tr d-ix="13"><td>007</td><td>MATL</td><td>160618T054251Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83228#83228">DJMcMayh</a></td></tr>
+<tr d-ix="14"><td>009</td><td>Pyke</td><td>160618T093636Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83231#83231">Blue</a></td></tr>
+<tr d-ix="15"><td>015</td><td>J</td><td>160618T052514Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83226#83226">miles</a></td></tr>
+<tr d-ix="16"><td>029</td><td>Python</td><td>160618T043338Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83224#83224">xnor</a></td></tr>
+<tr d-ix="17"><td>038</td><td>Python</td><td>160618T042947Z</td><td><a href="https://codegolf.stackexchange.com/questions/83221/parity-of-nth-term-in-fibonacci-integer-sequences/83223#83223">Leaky Nu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 11 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 7 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>gVpVx¹v
+</code></pre>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=Z1ZwVni5dg&amp;input=MTAKWzIsIDRd" rel="nofollow noreferrer">Try it here</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 11 bytes</h1>
 <pre><code>TⒻ⍅∆E⍁ζ9Vi∨
 </code></pre>
 <p>Translation of the Python answer.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org/" rel="nofollow noreferrer">Rust</a>, 23 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org/" rel="nofollow noreferrer">Rust</a>, 23 bytes</h1>
 <p>Port of xnor's <a href="https://codegolf.stackexchange.com/a/83224/95792">answer</a>, which you should upvote!</p>
 
 <pre class="lang-rust prettyprint-override"><code>|a,b,n|[a,b,a+b][n%3]%2
@@ -57,7 +63,7 @@
 <p><a href="https://tio.run/##dYzBCoMwEETv/YqpICR0C5pYSlvaHxEPEQwE7FI0Xqp@e5p4rpdZhrdvhmn0wTLexrGQmA9A33nYOywLpxVhi2l0307i/EoVz7AYaomXOh1zapuac93kKjyi/xkc@56PIpvXjGBFQSgJlZR/qdrobYeWVcRXgtrTdXTjy2V/PS0UCa/hBw" rel="nofollow noreferrer" title="Rust – Try It Online">Try it online!</a></p>
 <p>Rust is <a href="https://codegolf.meta.stackexchange.com/q/20531/95792">Language of the month for December</a>, but it doesn't have a ton of answers, so I'm posting a trivial one to remind y'all that Rust can sometimes beat Python too.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 27 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://factorcode.org/" rel="nofollow noreferrer">Factor</a>, 27 bytes</h1>
 <pre><code>[ [ tuck + ] times . odd? ]
 </code></pre>
 <p><a href="https://tio.run/##LY47D4JAEIR7fsWUGoPhZYxYWBoaGmNFKMhxBMLjzrslkRB@O65is/kyM5mdqhCkzPp8JOk9RivNIDv0BdXQRhJN2jQDwcrXKAchLa5OksawwhQkaicGjaLFDm9McF0@X9ijHDVco4jjM2Z48BFhYQqYLj/yI/hnBJscsuif/gk2PMZlzZBt/QfkoKbn90eosrwhZ69qjKWQHR6qlZW8WuPoiE4WZv0A" rel="nofollow noreferrer" title="Factor – Try It Online">Try it online!</a></p>
@@ -69,7 +75,7 @@
 ]
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + pryr, 30 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + pryr, 30 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>pryr::f(c(x,y,x+y)[n%%3+1]%%2)
 </code></pre>
@@ -79,7 +85,7 @@ Function with arguments <code>n</code>,<code>x</code> and <code>y</code>, where 
 <p>The <code>f()</code> function from the <code>pryr</code> library is a short way to define a function.  In code-golf, it's sometimes used simply because <code>pryr::f</code> has one less character than <code>function</code>.  However, it also tries to 'guess' the function arguments from the body of the function if they are not declared (using a mysterious and not well-documented algorithm).  This is particularly useful here, where declaring <code>x,y,n</code> in a conventional function definition would cost an extra 5 bytes.<br />
 Luckily, in this case <code>f</code> somehow manages to guess the arguments perfectly.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 3 bytes</h1>
 <pre><code>+¡Ḃ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/1/70MKHO5r@//9vaPLf0Py/kQkA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -93,7 +99,7 @@ Luckily, in this case <code>f</code> somehow manages to guess the arguments perf
   Ḃ - Bit; Return 1 for odd, 0 for even
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-MList::Util=sum -pla</code>, 21 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-MList::Util=sum -pla</code>, 21 bytes</h1>
 <p>A port of @xnor's python answer as a Perl program.</p>
 
 <pre class="lang-perl prettyprint-override"><code>$_=(@F,sum@F)[&lt;&gt;%3]%2
@@ -101,7 +107,7 @@ Luckily, in this case <code>f</code> somehow manages to guess the arguments perf
 <p><a href="https://tio.run/##K0gtyjH9/18l3lbDwU2nuDTXwU0z2sZO1ThW1ej/fwMFQy4TLiMgacllaKJgaM5lZMJlrADkmAJFTbgMDf7lF5Rk5ucV/9f1NdUzMDQA0j6ZxSVWVqElmTm2QPP@6@YUJAIA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 <p>Inputs the two starting sequence numbers on the first line and the element to find on the second.  Outputs <code>1</code> for odd parity and <code>0</code> for even.</p>
 </div>
-<div id="pu6" class="pu"><h1>CJam, 9 bytes</h1>
+<div id="pu7" class="pu"><h1>CJam, 9 bytes</h1>
 
 <pre><code>q~_:++=2%
 </code></pre>
@@ -120,14 +126,14 @@ Luckily, in this case <code>f</code> somehow manages to guess the arguments perf
        2% e# Modulo 2
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>Mathematica, <s>38</s> 36 bytes</h1>
+<div id="pu8" class="pu"><h1>Mathematica, <s>38</s> 36 bytes</h1>
 
 <pre><code>OddQ@({#,#2,+##}&amp;@@#)[[#2~Mod~3+1]]&amp;
 </code></pre>
 
 <p>Anonymous function, based off of @xnor's Python approach. Takes a list and an integer, and outputs either <code>True</code> for odd or <code>False</code> for even. Not much beyond that.</p>
 </div>
-<div id="pu8" class="pu"><h2>Actually, 12 bytes</h2>
+<div id="pu9" class="pu"><h2>Actually, 12 bytes</h2>
 <pre><code>╗│+k3╜%@E2@%
 </code></pre>
 <p>This uses the same strategy as <a href="https://codegolf.stackexchange.com/a/83224/45941">xnor's Python answer</a>. Input is <code>a b n</code>, with the spaces replaced by newlines. Output is <code>0</code> for even parity and <code>1</code> for odd parity.</p>
@@ -143,7 +149,7 @@ Luckily, in this case <code>f</code> somehow manages to guess the arguments perf
          2@%  mod 2 ([[a, b, a+b][n%3]%2)
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1>Julia, 23 bytes</h1>
+<div id="pu10" class="pu"><h1>Julia, 23 bytes</h1>
 
 
 
@@ -152,7 +158,7 @@ Luckily, in this case <code>f</code> somehow manages to guess the arguments perf
 
 <p><a href="http://julia.tryitonline.net/#code=eFxuPVt4O3N1bSh4KV1bbiUzKzFdJTIKCmZvciAoeCxuKSBpbiAoIChbMCwxXSw0KSwgKFsyLDFdLDkpLCAoWzE0LDE3XSwyNCksIChbMyw5XSwxNSksIChbMiw0XSwxMCkgKQogICAgQHByaW50ZigiJS03cyAlMmQgLT4gJWRcbiIsIHgsIG4sIHhcbikKZW5k&amp;input=" rel="nofollow">Try it online!</a></p>
 </div>
-<div id="pu10" class="pu"><h1><a href="http://github.com/DennisMitchell/jelly" rel="nofollow">Jelly</a>, 4 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow">bytes</a></h1>
+<div id="pu11" class="pu"><h1><a href="http://github.com/DennisMitchell/jelly" rel="nofollow">Jelly</a>, 4 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow">bytes</a></h1>
 
 <pre><code>^¡^Ḃ
 </code></pre>
@@ -171,7 +177,7 @@ Luckily, in this case <code>f</code> somehow manages to guess the arguments perf
 
 <p>Finally, <code>Ḃ</code> (bit) computes and returns the parity of <strong>x(n)</strong>.</p>
 </div>
-<div id="pu11" class="pu"><h1><a href="http://perl6.org" rel="nofollow">Perl 6</a>, <s> 24 </s> 23 bytes</h1>
+<div id="pu12" class="pu"><h1><a href="http://perl6.org" rel="nofollow">Perl 6</a>, <s> 24 </s> 23 bytes</h1>
 
 
 
@@ -220,7 +226,7 @@ ok 5 - ([2 4] 10) =&gt; even
 }
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1>MATL, <s>10</s> 7 bytes</h1>
+<div id="pu13" class="pu"><h1>MATL, <s>10</s> 7 bytes</h1>
 <pre><code>tshwQ)o
 </code></pre>
 <p><a href="http://matl.tryitonline.net/#code=dHNod1Epbw&amp;input=WzE0LCAxN10KMjQ" rel="nofollow noreferrer">Try it online!</a></p>
@@ -234,7 +240,7 @@ ok 5 - ([2 4] 10) =&gt; even
       o      #Return it's parity
 </code></pre>
 </div>
-<div id="pu13" class="pu"><h2>Pyke, 9 bytes</h2>
+<div id="pu14" class="pu"><h2>Pyke, 9 bytes</h2>
 <pre><code>3%QDs+@2%
 </code></pre>
 <p><a href="http://pyke.catbus.co.uk/?code=3%25QDs%2B%402%25&amp;input=%5B0%2C+1%5D%0A4&amp;warnings=0" rel="nofollow noreferrer">Try it here!</a></p>
@@ -244,7 +250,7 @@ ok 5 - ([2 4] 10) =&gt; even
        2% - ^ % 2
 </code></pre>
 </div>
-<div id="pu14" class="pu"><h1>J, 15 bytes</h1>
+<div id="pu15" class="pu"><h1>J, 15 bytes</h1>
 
 <pre><code>2|0{(]{:,+/)^:[
 </code></pre>
@@ -276,7 +282,7 @@ ok 5 - ([2 4] 10) =&gt; even
 2|               Take that value modulo 2 and return
 </code></pre>
 </div>
-<div id="pu15" class="pu"><h2>Python, 29 bytes</h2>
+<div id="pu16" class="pu"><h2>Python, 29 bytes</h2>
 
 <pre class="lang-python prettyprint-override"><code>lambda a,b,n:[a,b,a+b][n%3]%2
 </code></pre>
@@ -287,7 +293,7 @@ ok 5 - ([2 4] 10) =&gt; even
 </code></pre>
 <p><code>True</code> for odd, <code>False</code> for even</p>
 </div>
-<div id="pu16" class="pu"><h1>Python, 38 bytes</h1>
+<div id="pu17" class="pu"><h1>Python, 38 bytes</h1>
 <pre><code>lambda a,b,n:(b*(n%3&gt;0)+a*(~-n%3&gt;0))%2
 </code></pre>
 </div>
