--- a/q/274342.html
+++ b/q/274342.html
@@ -26,17 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>092</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
-<tr d-ix="1"><td>034</td><td>05AB1E</td><td>240723T130521Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274351#274351">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>100</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
-<tr d-ix="3"><td>193</td><td>Setanta</td><td>240723T223355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274376#274376">bb94</a></td></tr>
-<tr d-ix="4"><td>050</td><td>Charcoal</td><td>240723T215243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274374#274374">Neil</a></td></tr>
-<tr d-ix="5"><td>080</td><td>JavaScript Node.js</td><td>240723T100159Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274347#274347">l4m2</a></td></tr>
-<tr d-ix="6"><td>071</td><td>Perl 5 p</td><td>240723T093221Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274345#274345">ovs</a></td></tr>
-<tr d-ix="7"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
-<tr d-ix="8"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
+<tr d-ix="0"><td>120</td><td>Google Sheets</td><td>240724T111238Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274403#274403">z..</a></td></tr>
+<tr d-ix="1"><td>092</td><td>Python</td><td>240724T062044Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274386#274386">Albert.L</a></td></tr>
+<tr d-ix="2"><td>034</td><td>05AB1E</td><td>240723T130521Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274351#274351">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>100</td><td>Python</td><td>240724T043605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274385#274385">Mukundan</a></td></tr>
+<tr d-ix="4"><td>193</td><td>Setanta</td><td>240723T223355Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274376#274376">bb94</a></td></tr>
+<tr d-ix="5"><td>050</td><td>Charcoal</td><td>240723T215243Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274374#274374">Neil</a></td></tr>
+<tr d-ix="6"><td>080</td><td>JavaScript Node.js</td><td>240723T100159Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274347#274347">l4m2</a></td></tr>
+<tr d-ix="7"><td>071</td><td>Perl 5 p</td><td>240723T093221Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274345#274345">ovs</a></td></tr>
+<tr d-ix="8"><td>053</td><td>Retina 0.8.2</td><td>240723T094301Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274346#274346">Neil</a></td></tr>
+<tr d-ix="9"><td>137</td><td>Python 3.8 prerelease</td><td>240723T091424Z</td><td><a href="https://codegolf.stackexchange.com/questions/274342/simulate-text-cursor/274343#274343">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 92 bytes</h1>
+<div id="pu0" class="pu"><h1>Google Sheets, 120 bytes</h1>
+<p>Expects the string in A2 and the moves in B2:</p>
+<pre class="lang-cpp prettyprint-override"><code>=REDUCE(A2,SEQUENCE(LEN(B2)),LAMBDA(a,i,REGEXREPLACE(a,&quot;(.?)\|(.?)&quot;,SWITCH(MID(B2,i,1),&quot;&gt;&quot;,&quot;$1$2|&quot;,&quot;&lt;&quot;,&quot;|$1$2&quot;,&quot;|$2&quot;)))) 
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 92 bytes</h1>
 <h3>-1 thanks to @xnor</h3>
 <pre class="lang-python prettyprint-override"><code>lambda s,c:[s:=re.sub((2*&quot;((\.|))&quot;)[i&lt;&quot;=&quot;::2],r&quot;\2\1&quot;[:ord(i)&amp;6],s)for i in c][-1]
 import re
@@ -49,7 +55,7 @@ import re
 <p><a href="https://ato.pxeger.com/run?1=VY5BboMwEEX3nGJkFrFTghpWEQJv2hNU3QGqHGKUkcBYtllUYt9DdBOpau-U23QIldp-2bOZp__m_cu-hvNoLh9dWX9Oodsdrk2vhuNJgU_avPJ56XTqpyPn2ZZxXqezEExUWLCS5XnWJI7VGbujuWdbjpLFTCRedKMDBDTQNtVu30Q42NEFcPpH8rQAPRq9MKPVht-LPAKSviQtlDAoy31wKX20yQKmzioXMOBo-AY2QhBtHZrAO06nCrE2X65vz2f0QE9B0D7MEBdL4ltk9DA5P5Ncm9NtD_JvihWgvZ8D-Vak-I0sokfd66BB9T11_4skIJqpkWxyvecb" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Inspired by other regex based answers.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>35</s> 34 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>35</s> 34 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>Çvā&lt;VÐ'|kDy61.S+‚YÃUy₆›iXèë'|æ}RXǝ
 </code></pre>
 <p>Inputs in the order <span class="math-container">\$moves,string\$</span>.</p>
@@ -80,18 +86,18 @@ import re
                   # (after the loop, the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 100 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 100 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda s,o:[[s.pop(j:=s.index('|')),j&gt;0==i^35and s.pop(j-1),s.insert(max(0,j+i%5-1),'|')]for i in o]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=XZDNSsNAFIXXyVMMU6QzmoYWKUhJAkURBBeC3aURopmQCelkyNxChbyJm27qO3Xjk7hwfqJWDyGQc75zc2fe3uUrVK3YH0oUo_VhC-Xk6lg0-ea5yJEK2kWaqlC2ktSLWIVcFGxHxv2Y0qBOpnHMny7nuSjQwExmNDCUYh2QTb4j06C-4Gdz45tWVrYd4ogL1GbDvz6M1XDBrCuZIFO68JEWFzJAbCf1YiYPOwUdl4SGSjYcCF7DJEGYWlYFuqs0qUtDPl7DOEAzl7tQv8NhiO_sLWg7PVeZ_SyJNuykkImXtmCEurrsuACS4tvl3T0OEH5YPj7iLMU4rFsuTIuiODbLZjo9cak75f74uaq4QvrJETAFveeNIqORVeJ5-iyrKu9N6l9vO9Xra2H6Zg3tJaeKHG2gE6b3B0P1kHfgetGvksi2-m_qB_JvWMOAobxp9Fbe6I8S3bQ132SeXiSy27pZ_lK0ULHOzOnhf9fIYuAu4Qs" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Modifies the input in-place</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 193 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, 193 bytes</h1>
 <pre><code>gniomh(s,m){s=roinn@s(&quot;|&quot;)t:=s[1]s=s[0]le i idir(0,fad@m){i=m[i]u:=fad@s ma i==&quot;&lt;&quot;&amp;u{t=s[-1]+t s=cuid@s(0,u-1)}ma i==&quot;&gt;&quot;&amp;fad@t{s+=t[0]t=cuid@t(1,fad@t)}ma i==&quot;#&quot; s=cuid@s(0,u-1)}toradh s+&quot;|&quot;+t}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICw1-6bCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 50 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 50 bytes</h1>
 <pre><code>≔⪪Ｓ¹θＦ⁺×&lt;⌕⮌θ|⁺#Ｓ≡ι&lt;«¿θ⊞υ⊟θ»&gt;«¿υ⊞θ⊟υ»≔∧θ⊟θηＦθι|Ｗυ⊟υ
 </code></pre>
 <p><a href="https://tio.run/##VY/PasMwDMbP8VMI56JAdti1KYVeCruVtS9gUqcWePknuz2sfXZPSZqxCRtZ5sf3faqdGevO@JT2zHRt8dR7CvjR9jGcwkjtFYsS3uUORaWabgQ8@sh4pi/LqLe6hAO1F/y0NzuyxUFI/dCFtJnTuRD/1KRUxncKtQOkAr5VVhu2IFqbacioAZGBY2SHUWS6XkYxz54ruftDxhc5LGRcyYttTPRhA6@99hJy@FUrwQn3XBaazCRbkDSVWl7TCpW6O/J2sZh/V4OUzo4Y5BgIlsND5dup8rl26e3mfwA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -114,13 +120,13 @@ import re
 </code></pre>
 <p>Reconstitute the string from the lists.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 80 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 80 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>g=(x,[c,...d])=&gt;c?g(x.replace(/(.?)\|(.?)/,c&lt;g?'|$2':c&gt;'='?'$1$2|':'|$1$2'),d):x
 </code></pre>
 <p><a href="https://tio.run/##HYjBCsMgEAV/JRBhVzCG5hii/kRvbQ@yEZsSYohSPPjvNunwGB7zsV8b6Vj21G1hdrV6hVk8SEgp5xdXmozHLA@3r5Yc9igNf5bLvaDJGyhsgJE0KDDAbmwoMJ7tPMDFzMdcKWwxrE6uwaNHuL@X2JyzTXIxFRDQThftHw2c1x8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl 5</a> <code>-p</code>, 71 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl 5</a> <code>-p</code>, 71 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>%C=qw(&lt; (.)\|/|$1/ &gt; \|(.)/$1|/ # .\|/|/);eval join&quot;;s/&quot;,@C{&lt;&gt;=~/^|./g}
 </code></pre>
@@ -131,7 +137,7 @@ import re
 </code></pre>
 <p><a href="https://tio.run/##VY1BCsIwEEX3OcXQRtoubFBw1TQI9QguuwkYtBDamkRdOHp049gu1McsHvzPn9E4u4lx0dTnWy7Bi7zIy6JFUOQtkkNKVrZYVDypM8FXyNeiyipz1TbZNnep6qfgWIrjI4lxf@o80GkIxgdkqfyQTijWXJzHwYHpD1PO1C9yLlDuMWgX5or8oiTbGWuCAW0tbf@hqMCQFumbeg1j6Ibex@Vo3w" rel="noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="noreferrer">Retina 0.8.2</a>, 53 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="noreferrer">Retina 0.8.2</a>, 53 bytes</h1>
 <pre><code>+`\|(.?)(.*&#9;)&gt;|(.?)\|(.*&#9;)&lt;|.?\|(.*&#9;)#
 $1|$2$3$4$5
 &#9;
@@ -139,7 +145,7 @@ $1|$2$3$4$5
 </code></pre>
 <p><a href="https://tio.run/##VY29CsMwDIRn6ykM9pC0YOjfZpShfYSOHWqooAGTgu1sendXcQptPzScdMcpURmnUOv2fuPODX3nNqrHJpeDLJ7d8JEG7I7t3h7s0Z5AQa3X55i1TNCFcmFl/IJpIJznlPmVNE2P5iv8xa8B8TOXkMoa8V/Qw4UiFdIhRun@AyUALI3yDd8" rel="noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Takes input separated by tabs (normally would have used newlines but that makes writing a test suite harder). Explanation: The replacement stage simply shuffles the <code>|</code> around depending on the next operation, with the <code>+</code> prefix repeating until no more operations remain, then finally the tab is deleted.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 137 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 137 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda s,n=0,*m:n and f([(x:=s[:(c:=s.find('|'))and~-c])+'|'+s[c-1:c]+s[c+1:],0,s[:c]+s[c+1:c+2]+'|'+s[c+2:],x+s[c:]][ord(n)%4],*m)or s
 </code></pre>
