--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240724T112807Z
+"   /golfscore                                      20240724T120115Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/274369.html">How comparison-heavy is this list?              : 0274369</a>
 <a href="q/188988.html">DDoouubbllee ssppeeaakk!!                       : 0188988</a>
 <a href="q/274342.html">Simulate Text Cursor                            : 0274342</a>
 <a href="q/274348.html">Substring of Fizzbuzz                           : 0274348</a>
