--- a/q/274369.html
+++ b/q/274369.html
@@ -32,6 +32,11 @@
 <pre><code>{1≥n←≢⍵:0⋄+/(⍵{(×l)++/∧\⊃=/⍺⍵↑⍨¨l←⍺⌊⍥≢⍵}¨(⍵,⊂⍬)[r⍳{⍵+m=(m,2)[r⍳⍵]}⍣≡r←⍋⍋⍵]),∇¨⍵⊂⍨≠m←n&lt;2×⍳n}
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=JY09DoJAEIWvs2RJUEojJ1FuwG5Bu6FRg@ziJFrR@hPiFnaGxhJu8k7iLCRTvPky3xuzhu016ivsEzRsVmhPMhEcjZi6IpIyQfPewx2zBPRjjvoG8qMvgsTk4kD9YlejD2YMdwB9ol0J@hoGUmVCxekCeM8r0Av2Uc4V7TxDHsVozqMPL4LvYe@KD/Q2nTr2dPUH&amp;f=S1NQT0rMA0J1BXUYjeCCOeoKGjrqieqaXGlAMSBQB1NJECoZQqWoQ2VTsMkmgmVz84uA3BIwWZRfgswG0gA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p>A recursive function computing the total number of comparisons. Rough breakdown:</p>
+<p><code>1≥n←≢⍵:0</code>. If there is only a single string in the list, no comparisons are needed.</p>
+<p><code>∇¨⍵⊂⍨≠m←n&lt;2×⍳n</code>. Split the list into two halves, call the function recursively.</p>
+<p><code>⍵ ... (⍵,⊂⍬)[r⍳{⍵+m=(m,2)[r⍳⍵]}⍣≡r←⍋⍋⍵]</code>. Match up each string with the next larger string in the other half.</p>
+<p><code>{(×l)++/∧\⊃=/⍺⍵↑⍨¨l←⍺⌊⍥≢⍵}¨</code> For each pairing, count the necessary character comparisons to sort.</p>
 </div>
 
 <table id="st">
