--- a/q/274369.html
+++ b/q/274369.html
@@ -38,11 +38,11 @@
 <p><code>⍵ ... (⍵,⊂⍬)[r⍳{⍵+m=(m,2)[r⍳⍵]}⍣≡r←⍋⍋⍵]</code>. Match up each string with the next larger string in the other half.</p>
 <p><code>{(×l)++/∧\⊃=/⍺⍵↑⍨¨l←⍺⌊⍥≢⍵}¨</code> For each pairing, count the necessary character comparisons to sort.</p>
 <hr />
-<h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>96 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>95 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>There is probably some better way to implement the grouping function.</p>
-<pre><code>{+/1+{+/∧\⊃=/⍺⍵↑⍨¨⍺⌊⍥≢⍵}/⍵[⍋⍵][↑⍸(××≠⍤1)k×⍉∧\×k←⊃⍤⍸¨∘.≠⍨↓↑({1=⍵:⊂⍬⋄⊃,/1 2,¨¨∇¨(⌊,⌈)⍵÷2}≢⍵)[⍋⍵]]}
+<pre><code>{+/1+{+/∧\⊃=/⍺⍵↑⍨¨⍺⌊⍥≢⍵}/⍵[⍋⍵][↑⍸(××≠⍤1)k×⍉∧\×k←⊃⍤⍸¨∘.≠⍨↓↑({1=⍵:0⋄⊃,/1 2,¨¨∇¨(⌊,⌈)⍵÷2}≢⍵)[⍋⍵]]}
 </code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=NY49DoJAEIWvYgmBuFlKE06CnIAjEBo16/IzicYCS2M0bmFLNJbsTd5JfGCsZubNN@9NGSkdlZGCfazRbFMF@UAGmCPEjW6augZyR32lXHE9ZJCWJc9m6B343veoL5CbDgu2Uk9mvi9gDrSkTopW9rycMQdz4mlQ6pQ2KzQbyBPtjmys9CKJxynY7kcXMDtGZ0Ny/pVUvyfC/wN59QU&amp;f=S1NQT0rMA0J1BXUYjeCCOeoKGjrqieqaXGlAMSBQB1NJECoZQqWoQ2VTsMkmgmVz84uA3BIwWZRfgswG0kAVEGtADgKKJiWBNSXBrQcLAQA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=NY3LDYJAFEVbcQmBOA5LEypBKqAEwkqDw@clGhfD0hiN0wDRuGQ6uZV4wbh6v/PuKSOlozJSMM8d2n2qIB/IiPoMcZObp76FPNDcuK54HjNIx5JnC/QOvPUWzRVy12HBVpo5zNsC9YmR3JNilBnWC@ZQX/galDplzHaD7kAsVnqVxNPsNMfJBdTG6E1IxL@S6ucP/@68@gI&amp;f=S1NQT0rMA0J1BXUYjeCCOeoKGjrqieqaXGlAMSBQB1NJECoZQqWoQ2VTsMkmgmVz84uA3BIwWZRfgswG0kAVEGtADgKKJiWBNSXBrQcLAQA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
 </div>
 
 <table id="st">
