--- a/q/274348.html
+++ b/q/274348.html
@@ -33,10 +33,10 @@
 </table>
 <div id="pu0" class="pu"><h2><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 18 bytes (SBCS).</h2>
 <p>-2 thanks to @emanresu A</p>
-<pre><code>⍸πx②≠Ay∑!④λ⌻y⌸hλⒾ2
+<pre><code>⍄πx②≠A⌿⍆P⍠⊔③H≥Ⓐ⍁⍚⍨
 </code></pre>
 <p>Encodes the following ES6 program:</p>
-<pre><code>n=&gt;{s='';for(i=0;i++&lt;100**n.length;s+=((i%3?'':'Fizz')+(i%5?'':'Buzz')||i));return s.includes(n)}
+<pre><code>n=&gt;{s='';for(i=0;i++&lt;1000**n.length;s+=((i%3?'':'Fizz')+(i%5?'':'Buzz')||i));return s.includes(n)}
 </code></pre>
 <p>Uses a similar idea to Dominic van Essen's answer.</p>
 </div>
