--- a/q/274389.html
+++ b/q/274389.html
@@ -26,21 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>088</td><td>Python 3.8 prerelease</td><td>240724T095658Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274399#274399">Jitse</a></td></tr>
-<tr d-ix="1"><td>021</td><td>Haskell + hgl</td><td>240724T135452Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274410#274410">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>021</td><td>Haskell + hgl</td><td>240724T135452Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274410#274410">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>085</td><td>Python 3.8 prerelease</td><td>240724T095658Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274399#274399">Jitse</a></td></tr>
 <tr d-ix="2"><td>048</td><td>R</td><td>240724T103921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274402#274402">pajonk</a></td></tr>
 <tr d-ix="3"><td>010</td><td>Japt</td><td>240724T093257Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274397#274397">Shaggy</a></td></tr>
 <tr d-ix="4"><td>043</td><td>JavaScript ES6</td><td>240724T081140Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274391#274391">Arnauld</a></td></tr>
 <tr d-ix="5"><td>009</td><td>QuadR</td><td>240724T085533Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274394#274394">Ad&#225;</a></td></tr>
 <tr d-ix="6"><td>008</td><td>05AB1E legacy</td><td>240724T083148Z</td><td><a href="https://codegolf.stackexchange.com/questions/274389/reduce-a-string-up-to-idempotency/274393#274393">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 88 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda s:[s:=s.replace((x:=s[j:i])+x,x)for i in range(len(s))for j in range(i+1)]&lt;[]or s
-</code></pre>
-<p><a href="https://tio.run/##TY9fb4IwFMXf@ylKX2wDq//24IhofPTJly0hcWZhrgoOaUO7BF/46uy2RRRa7jm/e0p61c3kspovVN2dks@uzK7fPxnW8V7Hiea1UGV2FJQ24PaXuDiwsIkadpI1LnBR4TqrzoKWoqKaOXp50CKcssNyfwCqO3eiUhH@irD8MzZ1zRTVpuZalYUBquAvE8ZihH3SxhKXGm6lORwoFB2REYswvccYgzO10Ng9CT7ZjmWqLipDbSdJbDCyKdYRgl9WmBBEGq8aK5/1rdc3MEGw9g4qIuE4HHsLFZFpCK/3Vlgwe4CZQ23betCCec8FrKsHTiFicmEGZjw77j7OuSdeIpJu00268cxqQNtn5lHaz5HaQaZvi8n8FVZ/I2eBc84Duz2GOqD1HXE77U7@BrB7ODhEllLKFXxWvrME8Q8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 21 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 21 bytes</h1>
 <pre><code>yyc$gkY$bn h_ ʃ#|hdS
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNxczcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRMDS0pI0XYvtabaVlckq6dmRKkl5ChnxCqealWsyUoIhsjcn5yZm5inYKqTkcyko5MYraBQUKdgopGkCeQoK0QpKiUpglg6QhcRMAkIkCSAPiJGlMfhghK4lGUQjMSDysRCnLVgAoQE" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -48,7 +42,7 @@
 <ul>
 <li><code>yyc</code>: Repeat until reaching a fixed point.</li>
 <li><code>gkY</code>: Apply a parser as many times as is required to consume the input.</li>
-<li><code>bn h_ ʃ</code>: Parse some string twice.</li>
+<li><code>bn h_ ʃ</code>: Parse some string twice. This returns the parsed string only once.</li>
 <li><code>#|</code>: ... or else ... (<code>++</code> would also work here).</li>
 <li><code>hdS</code>: Parse a single character.</li>
 </ul>
@@ -65,6 +59,12 @@
 <li>I would like an &quot;unpairs&quot; function that basically undoes what <code>pA</code> does. Would be useful in writing a short contiguous nub.</li>
 <li><code>sps</code> finds all the splits into two pieces. But here I'd like all partitions into <em>3</em> pieces. It'd be good to have builtin which takes a number, <span class="math-container">\$n\$</span>, and finds all the partitions into <span class="math-container">\$n\$</span> pieces, with presets for small numbers like 3. <code>pST eL3</code> almost does what I want, but it returns a list which is a bit annoying. It's also inefficient and 7 bytes long.</li>
 </ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 85 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:[r:=range(len(s))]+[s:=s.replace(s[i:j]*2,s[i:j])for i in r for j in r]and s
+</code></pre>
+<p><a href="https://tio.run/##TY9Pc4IwEMXvfIqQi6RQ/NeDZUTHoycv7Qwz6nSoomAxZJJ0Ri98dbrLIhUS9r3fvgxZdbd5JaczpZtTvGvK9Pp9TJmJtjqKdSrPmVdm0jNC7P2tiWIT6kyV6SHzzLaILvuXSUBCnCrNClZIphnKSyv3qTwy07Q9qQL2FbDq12LrmirPWB0aVRYWqIK/jISIHEZJjMVtqr@SCeFAobwBH4iAeY@YEHBGZ4a1T8xO2EGmdCGth504xmCAKdFwzl4XjHOH30jdUD7re6fvYFx3SQ6qw/2hPyQL1eFjH17yKBBM/sGkRXVdE6jBfOQZrCuBVjnc5pntmSV22HyecyIkHZ6sk1WyIoYa0PqZEUq6ORIcZPw@G03fYHU3ai3wMAxd3ISh9mj5QCFOu6l@XNgd7J3D51VVLeCzoM4cxB8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 48 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(s){while(s!=(s=sub(&quot;(.+)\\1&quot;,&quot;\\1&quot;,s,,T)))0;s}
